# velvt

./: .containerignore  .gcloudignore  .gitignore  AGENT_DIRECTIVE.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.full  DEPLOY.md  Dioxus.toml  PRD.md  PROGRESS.md  QUICKREF.md  README.md  STATE.md  TASKS.md  cloudbuild.yaml  compose.yml  debug_html.rs  debug_test.rs  index.html  justfile  nginx.conf  rust-toolchain.toml  sws.toml
.claude/: settings.json
.claude/agents/: code-writer.md  doc-keeper.md  file-search.md  security-reviewer.md
.claude/commands/: autonomous.md
.github/workflows/: deploy-pages.yml  pr-gate.yml  publish-container.yml
.skills/: INDEX.md
.skills/autonomous-deploy-cicd/: SKILL.md
.skills/code-review-gate/: SKILL.md
.skills/container-distroless/: SKILL.md
.skills/defensive-security/: SKILL.md
.skills/dioxus-carbon-frontend/: SKILL.md
.skills/graphify/: SKILL.md
.skills/infrastructure-scalability/: SKILL.md
.skills/rust-workspace-scaffold/: SKILL.md
.skills/samir-product-philosophy/: SKILL.md
.skills/tdd-discipline/: SKILL.md
.skills/testing-strategy/: SKILL.md
.skills/tofu-module-registry/: SKILL.md
.skills/token-frugal/: SKILL.md
.skills/token-optimization/: SKILL.md
.skills/wasm-build-gate/: SKILL.md
assets/: theme-dxh77a2b88ee8259c7.css  vaelvet-ui-dxh553814b42f226a92.js  vaelvet-ui-dxhf8a6c25c817a033.js  vaelvet-ui_bg-dxh23524d979569be1b.wasm  vaelvet-ui_bg-dxh9f09e534568cbe.wasm
content/: site.md  site.toml
deployment/: index.html  sitemap.xml
docs/cse_studies/: greenfuture-immersive-storytelling.md  luxe-beauty-celebrity-launch.md  next-is-yours.md  technova-full-funnel-growth.md
memory/: MEMORY.md
ops/: Caddyfile
scripts/: Caddyfile  bootstrap.sh  inline-js.sh  post_build.sh  spa_server.py
server/: Cargo.toml
server/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs
server/tests/: integration.rs
test-suite/: coverage-goals.md
test-suite/playwright/: dump-html.cjs  package-lock.json  package.json  page-dump.html  playwright.config.js  playwright.config.ts  responsive-audit.cjs  screenshot.cjs  test-console.cjs  test-scroll.cjs
test-suite/playwright/specs/: case-studies.spec.ts  home.spec.ts  velvet.spec.js
velvet-ui/: Cargo.toml  build.rs  index copy.html  index.html
velvet-ui/assets/: robots.txt  sitemap.xml  theme.css
velvet-ui/src/: case_studies.rs  config.rs  generated_case_studies.rs  lib.rs  main.rs  markdown.rs  prelude.rs  routes.rs  scroll.rs  spa.rs
velvet-ui/src/components/: about_aggregated_panel.rs  ai_panel.rs  analytics_panel.rs  awards_panel.rs  case_header.rs  case_studies.rs  cases_panel.rs  client_banner.rs  contact.rs  cta_panel.rs  footer.rs  footer_panel.rs  hero.rs  hero_panel.rs  icons.rs  loader.rs  manifesto.rs  markdown_renderer.rs  mobile_nav.rs  mod.rs  nav.rs  next_hint.rs  pr_panel.rs  process_panel.rs  scroll_progress.rs  section_dots.rs  services.rs  services_panel.rs  social_panel.rs  social_strip.rs  stacked_nav.rs  story_panel.rs  studio_panel.rs  topbar.rs  work_with_us.rs
velvet-ui/src/components/contact/: contact.rs  mod.rs
velvet-ui/src/components/footer/: footer.rs  mod.rs
velvet-ui/src/components/hero/: hero.rs  mod.rs
velvet-ui/src/components/navbar/: mod.rs  navbar.rs
velvet-ui/src/components/podcast/: mod.rs  podcast.rs
velvet-ui/src/components/portfolio/: mod.rs  portfolio.rs
velvet-ui/src/components/services/: mod.rs  services.rs
velvet-ui/src/components/shared/: button.rs  card.rs  fade_in.rs  mod.rs  scroll_hook.rs  section.rs  seo.rs
velvet-ui/src/components/talent/: mod.rs  talent.rs
velvet-ui/src/routes/: case_studies_index.rs  case_study.rs  home.rs  mod.rs
velvet-ui/src/theme/: brand.rs  mod.rs  tokens.rs
velvet-ui/tests/: integration.rs  render.rs
