[workspace]
resolver = "2"
members = ["velvet-ui", "server"]

[workspace.package]
version      = "0.2.0"
edition      = "2024"
rust-version = "1.88"
license      = "Apache-2.0"
authors      = ["Velvt"]

[workspace.dependencies]
dioxus              = { version = "=0.7.6", features = ["web"] }
dioxus-router       = "=0.7.6"
serde               = { version = "1", features = ["derive"] }
toml                = "0.8"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tracing-wasm        = "0.2"
thiserror           = "2"
gloo-timers         = "0.3"
web-sys             = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "CssStyleDeclaration", "DomTokenList", "NodeList", "KeyboardEvent", "ScrollToOptions", "ScrollBehavior", "Event", "Performance"] }
wasm-bindgen        = "0.2"
console_error_panic_hook = "0.1"
# js-sys removed — access via web-sys::js_sys re-export only

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used   = "deny"
expect_used   = "deny"
panic         = "deny"
todo          = "deny"
unimplemented = "deny"
print_stdout  = "deny"
print_stderr  = "deny"
# pedantic/nursery are deliberately NOT denied — they're noisy for UI code.
# We keep them off so the build stays green; security-critical lints remain deny.
pedantic = { level = "allow", priority = -1 }
nursery  = { level = "allow", priority = -1 }

[profile.release]
opt-level       = "z"
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true
overflow-checks = false   # UI code: no numeric overflow risk

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1
