[package]
name = "velvet-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
