[package]
name = "velvet-ui"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
dioxus-router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
gloo-timers = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
dioxus-ssr = "=0.7.6"

[lints]
workspace = true
