[package]
name         = "vaelvet-ui"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
path       = "src/lib.rs"

[[bin]]
name = "vaelvet-ui"
path = "src/main.rs"

[dependencies]
dioxus                   = { workspace = true }
dioxus-router            = { workspace = true }
serde                    = { workspace = true }
toml                     = { workspace = true }
tracing                  = { workspace = true }
tracing-wasm             = { workspace = true }
thiserror                = { workspace = true }
gloo-timers              = { workspace = true }
web-sys                  = { workspace = true }
wasm-bindgen             = { workspace = true }
console_error_panic_hook = { workspace = true }
# js-sys removed — use web_sys::js_sys re-export via web-sys crate
pulldown-cmark = "0.10"

[dev-dependencies]
dioxus-ssr = "=0.7.6"

[lints]
workspace = true
